--- a/styles.css
+++ b/styles.css
@@ -43,4 +43,14 @@ h1{
     box-shadow: 0 0 0 5px #3b83f65f;
     color: #fff;
   }
-  
+  img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+  }
+  li{
+    list-style-type: none;
+  }
+  h3{
+    color: #f3c239;
+  }
